[gd_scene load_steps=5 format=3 uid="uid://cx8p6bbp1kx6i"]

[ext_resource type="Theme" uid="uid://dq2k6takiambk" path="res://themes/theme.tres" id="1_4l4os"]
[ext_resource type="Script" uid="uid://dmf4svcr1acbv" path="res://scenes/key_board_settings.gd" id="2_8fib8"]
[ext_resource type="Shader" uid="uid://ls13bb20e1tm" path="res://shaders/blur.tres" id="3_fwqph"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jqc3v"]
shader = ExtResource("3_fwqph")
shader_parameter/blur_amount = 2.0
shader_parameter/color_over = Color(0, 0, 0, 1)
shader_parameter/mix_amount = 0.5
shader_parameter/alpha = 1.0

[node name="KeyBoardSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4l4os")
script = ExtResource("2_8fib8")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_jqc3v")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -57.5
offset_right = 47.5
offset_bottom = 57.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "键位设置"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "移动-左"

[node name="MoveLeft" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "←"

[node name="Label2" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "移动-右"

[node name="MoveRight" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "→"

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "跳跃"

[node name="Jump" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Space"

[node name="Label4" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "攻击"

[node name="Attack" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "J"

[node name="Label5" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "闪现"

[node name="Flash" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "K"

[node name="Label6" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "射击"

[node name="Shoot" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "M
"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "关闭"

[connection signal="pressed" from="VBoxContainer/GridContainer/MoveLeft" to="." method="_on_move_left_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/MoveRight" to="." method="_on_move_right_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Jump" to="." method="_on_jump_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Flash" to="." method="_on_flash_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Shoot" to="." method="_on_shoot_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
